kubernetes/apps/external/homeassistant/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.16
    ports:
      - port: 8123
        protocol: TCP
