kubernetes/apps/external/homeassistant/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: homeassistant
  namespace: default
  labels:
    kubernetes.io/service-name: homeassistant
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - 192.168.1.16
    conditions:
      ready: true
