kubernetes/apps/external/homeassistant/svc-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: default
spec:
  type: ExternalName
  externalName: homeassistant.torquasmvo.internal
