kubernetes/apps/external/homeassistant/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: default
spec:
  type: ExternalName
  externalName: homeassistant.torquasmvo.internal
  ports:
    - name: http
      port: 8123
      protocol: TCP
